@@ -26,6 +26,7 @@ import me.knighthat.interactivedeck.exception.RequestFormatException;
 import me.knighthat.interactivedeck.file.Profile;
 import me.knighthat.interactivedeck.logging.Log;
 import me.knighthat.interactivedeck.menus.MenuProperty;
+import me.knighthat.interactivedeck.menus.NotificationCenter;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.HashSet;
@@ -69,11 +70,16 @@ public class RequestHandler {
     static void logClientInfo() {
         assert Client.isConnected();
 
-        String deviceInfo = "Client: %s running on Android %s";
-        String model = Client.INSTANCE.model();
-        String aVer = Client.INSTANCE.androidVersion();
-        String message = String.format( deviceInfo, model, aVer );
-        Log.info( message );
+        Client client = Client.INSTANCE;
+        String manufacturer = client.manufacturer();
+        String model = client.model();
+        String aVer = client.androidVersion();
+
+        String deviceInfo = "Client %s %s running on Android %s".formatted( manufacturer, model, aVer );
+        Log.info( deviceInfo );
+
+        String device = "%s %s (Android %s)".formatted( manufacturer, model, aVer );
+        NotificationCenter.createConstantMessage( device );
     }
 
     static void handleAction( @NotNull JsonElement content ) {
